fix: shift visible window of header image slightly to the right

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -92,7 +92,7 @@ Control header/feature image height
 .feature {
   height: 100px;              /* adjust as you like */
   background-size: cover;     /* keeps aspect ratio, fills area */
-  background-position: center;
+  background-position: 60% center;
 }
 
 /* -------------------------
